Api for rebuilding project by areas

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jasper-build",
-  "version": "0.1.1",
+  "version": "0.1.15",
   "description": "Builder for jasper application.",
   "homepage": "https://github.com/jasperjs/jasper-build",
   "repository": "https://github.com/jasperjs/jasper-buildr",
@@ -12,7 +12,7 @@
   "keywords": [
     "jasperjs"
   ],
-  "main": "Gruntfile.js",
+  "main": "gruntfile.js",
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -28,9 +28,6 @@
     "clean-css": "^3.4.6",
     "glob": "^5.0.15",
     "uglify-js": "^2.5.0"
-  },
-  "peerDependencies": {
-    "grunt": "^0.4.0"
   },
   "scripts": {
     "test": "grunt test"
