--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,7 @@
 Thumbs.db
+node_modules
+npm-debug.log
+tmp
 
 *.backup
 *.gitattributes
@@ -11,4 +14,5 @@ lib/**/*.js.map
 
 test
 tsconfig.json
+
 gruntfile.js
